[package]
name = "pesel-tower"
version = "0.1.0"
authors = ["MaciekTalaska <maciek.talaska@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-web = "0.3.7"
tokio = "0.2.11"
serde = "1.0.104"
pesel = "0.1.1"
