[package]
name = "pesel-warp"
version = "0.1.0"
authors = ["MaciekTalaska <maciek.talaska@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.1"
tokio = { version = "0.2.11", features = ["macros"] }
pesel = "0.1.1"